# Projets_boat_navigation_and_fuel_optimisation

./: LICENSE  README.md
P0_ship-performance-physics/: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
P0_ship-performance-physics/docs/: MVP1_ANALYSIS.md  MVP2_ANALYSIS.md  MVP4_ANALYSIS.md  WBS_MVP_STRUCTURE.md
P0_ship-performance-physics/examples/: mvp2_calm_water_demo.py  mvp3_wind_effects_demo.py  mvp4_complete_resistance_demo.py  mvp5_complete_performance_demo.py
P0_ship-performance-physics/src/ship_performance/core/: ship_parameters.py
P0_ship-performance-physics/src/ship_performance/interfaces/: __init__.py  resistance.py
P0_ship-performance-physics/src/ship_performance/models/: __init__.py  performance_model.py  resistance_model.py
P0_ship-performance-physics/src/ship_performance/propulsion/: __init__.py  propulsion_model.py
P0_ship-performance-physics/src/ship_performance/resistance/: __init__.py  added_waves.py  calm_water.py  wave_making.py  windage.py
P0_ship-performance-physics/src/ship_performance/utils/: __init__.py  units.py
P0_ship-performance-physics/tests/: conftest.py
P0_ship-performance-physics/tests/resistance/: test_added_waves.py  test_windage.py
P1_resistance-interpolation/: PROJECT1_OVERVIEW_LIMITS.md
P1_resistance-interpolation/docs/: INDEX.md
P1_resistance-interpolation/notebooks/: 01_exploratory_analysis.ipynb
P1_resistance-interpolation/results/: all_benchmark_results.csv  all_normalized_results.csv  convergence_analysis.csv  noise_robustness.csv
P1_resistance-interpolation/scripts/: run_benchmarks.py  run_normalized_benchmarks.py  test_rbf_simple.py
P1_resistance-interpolation/tests/: test_metrics.py  test_preprocessor.py  test_spline_interpolator.py  test_synthetic.py
P2_route-optimization-dashboard/: .gitignore  PROJECT2_OVERVIEW_LIMITS.md  dashboard.py
P2_route-optimization-dashboard/Exemples/: 02_baseline_optimizer.ipynb  run_mvp1_demo.py
P2_route-optimization-dashboard/docs/: MVP-1_analysis_report.md  MVP-2_analysis_report.md  MVP-3_analysis_report.md  MVP-4_analysis_report.md
P2_route-optimization-dashboard/tests/: test_constraints.py  test_geometry.py  test_mvp2_integration.py  test_mvp3_integration.py  test_navigation_grid.py  test_route_planner.py  test_weather_field.py
P3_hybrid-fuel-ml/: PROJECT3_OVERVIEW_LIMITS.md  requirements.txt
P3_hybrid-fuel-ml/data/: README.md
P3_hybrid-fuel-ml/docs/: mvp3_report.md  mvp4_report.md  projet3.txt
P3_hybrid-fuel-ml/notebooks/: 01_eda.ipynb
P3_hybrid-fuel-ml/src/: calibration.py  data_profiler.py  eda_visualizations.py  train_hybrid_models.py  train_uncertainty.py
P3_hybrid-fuel-ml/tests/: test_data_preprocessing.py
Projets_boat_navigation_and_fuel_optimisation/P0_ship-performance-physics/: .gitignore  (+1 more)
(+122 files in other folders)
